--- a/config.json
+++ b/config.json
@@ -8,8 +8,7 @@
     "languages": {"ar": "عربي", "bg": "Български", "ca": "Català", "cs": "Čeština", "da": "Dansk", "de": "Deutsch","en": "English", "es": "Español", "es-mx": "Español - México", "eu": "Euskara", "fa": "فارسی", "fr" : "Français", "he" : "עברית", "hu": "magyar", "it": "Italiano", "ja": "日本語","nl": "Nederlands", "pl": "Polski", "pt-br": "Português - Brasil", "pt": "Português - Portugal", "ro": "Română", "ru": "Русский", "sv": "Svenska", "tr" : "Türkçe", "zh-cn" : "简体中文", "zh-tw" : "正體中文"},
     "wsservice" : "moodle_mobile_app",
     "wsextservice" : "local_mobile",
-    "presets" : {"url": "https://ssec.org.in/moodle30/", "username": ""},
-    "demo_sites": {},
+    "demo_sites": {"student": {"url": "https://ssec.org.in/moodle30/", "username": "", "password": ""}, "teacher": {"url": "https://ssec.org.in/moodle30/", "username": "", "password": ""}, "cva": {"url": "https://ssec.org.in/moodle30/", "username": "", "password": ""}},
     "gcmpn": "694767596569",
     "customurlscheme": "moodlemobile",
     "siteurl": "https://ssec.org.in/moodle30/",
