--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "app_id" : "in.edu.sreesakthi.sreesakthiengineeringcollege1",
-    "appname": "Moodle Mobile",
+    "appname": "Sree Sakthi Engineering College",
     "versioncode" : "6",
     "versionname" : "6",
     "cache_expiration_time" : 300000,
