--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "app_id" : "com.moodle.moodlemobile",
+    "app_id" : "in.edu.sreesakthi.sreesakthiengineeringcollege1",
     "appname": "Moodle Mobile",
     "versioncode" : "2015",
     "versionname" : "3.1.3",
